Added team logos to the standing's page.

--- a/App/AUDLStandingsTableViewCell.xib
+++ b/App/AUDLStandingsTableViewCell.xib
@@ -20,7 +20,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PDiff" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUW-mt-eyx">
-                        <rect key="frame" x="260" y="61" width="37" height="21"/>
+                        <rect key="frame" x="262" y="61" width="37" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Record" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJy-75-Ahs">
+                        <rect key="frame" x="125" y="61" width="59" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -36,19 +41,18 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Record" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJy-75-Ahs">
-                        <rect key="frame" x="124" y="61" width="59" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ARn-Vf-M36">
+                        <rect key="frame" x="25" y="18" width="45" height="45"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="pDiff" destination="dUW-mt-eyx" id="Awt-Aa-U4Z"/>
                 <outlet property="record" destination="tJy-75-Ahs" id="dyH-W4-0uE"/>
+                <outlet property="teamIcon" destination="ARn-Vf-M36" id="Oiq-JP-A4D"/>
                 <outlet property="teamName" destination="PgT-yo-xLO" id="kyX-vZ-vfc"/>
             </connections>
-            <point key="canvasLocation" x="200" y="249.5"/>
+            <point key="canvasLocation" x="200" y="248.5"/>
         </tableViewCell>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
