--- a/App/AUDLTwitterViewCell.xib
+++ b/App/AUDLTwitterViewCell.xib
@@ -14,17 +14,21 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMW-lF-6CK" customClass="AUDL">
-                        <rect key="frame" x="28" y="12" width="324" height="106"/>
+                        <rect key="frame" x="123" y="13" width="229" height="106"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t03-ra-fkh">
+                        <rect key="frame" x="17" y="9" width="92" height="65"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="feedText" destination="qMW-lF-6CK" id="XLr-Rd-ydH"/>
+                <outlet property="twitterIcon" destination="t03-ra-fkh" id="LQG-0e-98y"/>
             </connections>
-            <point key="canvasLocation" x="337.5" y="321.5"/>
+            <point key="canvasLocation" x="55.5" y="250.5"/>
         </tableViewCell>
     </objects>
 </document>
