--- a/App/AUDLTwitterViewCell.xib
+++ b/App/AUDLTwitterViewCell.xib
@@ -19,16 +19,20 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NZR-ut-7st">
+                        <rect key="frame" x="8" y="8" width="57" height="44"/>
+                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t03-ra-fkh">
-                        <rect key="frame" x="17" y="9" width="92" height="65"/>
+                        <rect key="frame" x="27" y="23" width="57" height="44"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="AUDLIcon" destination="NZR-ut-7st" id="Gmn-8C-F7f"/>
                 <outlet property="feedText" destination="qMW-lF-6CK" id="XLr-Rd-ydH"/>
                 <outlet property="twitterIcon" destination="t03-ra-fkh" id="LQG-0e-98y"/>
             </connections>
-            <point key="canvasLocation" x="55.5" y="250.5"/>
+            <point key="canvasLocation" x="55.5" y="249.5"/>
         </tableViewCell>
     </objects>
 </document>
