--- a/App/AUDLGameGraphView.xib
+++ b/App/AUDLGameGraphView.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AUDLGameGraphViewController">
             <connections>
+                <outlet property="gameID" destination="nFd-ut-iHq" id="038-pQ-gZo"/>
                 <outlet property="view" destination="iN0-l3-epB" id="do2-mz-hTY"/>
             </connections>
         </placeholder>
@@ -14,7 +15,18 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFd-ut-iHq">
+                    <rect key="frame" x="259" y="142" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="nFd-ut-iHq" secondAttribute="centerX" id="MFF-BA-c0b"/>
+            </constraints>
         </view>
     </objects>
 </document>
