Got full data sets added for each team.

--- a/App/AUDLGameGraphView.xib
+++ b/App/AUDLGameGraphView.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nF1-Pq-wKq">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nF1-Pq-wKq">
                     <rect key="frame" x="279" y="210" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -26,6 +26,8 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="nF1-Pq-wKq" secondAttribute="centerX" id="N6f-sJ-Xdp"/>
+                <constraint firstAttribute="centerX" secondItem="nF1-Pq-wKq" secondAttribute="centerX" id="Tcb-aY-iz6"/>
+                <constraint firstAttribute="centerY" secondItem="nF1-Pq-wKq" secondAttribute="centerY" id="z7i-07-uAE"/>
             </constraints>
         </view>
     </objects>
