--- a/Main.storyboard
+++ b/Main.storyboard
@@ -26,7 +26,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-540" y="123.99999999999999"/>
+            <point key="canvasLocation" x="-1016" y="1292"/>
         </scene>
         <!--Sidebar-->
         <scene sceneID="5ZB-bN-Nvy">
@@ -329,7 +329,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WiA-HB-QxT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="59" y="-255.99999999999997"/>
+            <point key="canvasLocation" x="-389" y="298"/>
         </scene>
         <!--News Table View Controller-->
         <scene sceneID="40t-d4-icd">
@@ -341,11 +341,12 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="sideBarButton" destination="INV-yQ-hje" id="Lpr-db-NYq"/>
+                        <segue destination="ybU-hs-ShC" kind="push" id="g1x-pa-ue8"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7KA-O0-jUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="725" y="-255.99999999999997"/>
+            <point key="canvasLocation" x="1445" y="-126"/>
         </scene>
         <!--AUDL-->
         <scene sceneID="c7o-tB-BnY">
@@ -392,7 +393,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o8p-ll-3Ju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1791" y="-1900.9999999999998"/>
+            <point key="canvasLocation" x="959" y="-1817"/>
         </scene>
         <!--Scores Table View Controller-->
         <scene sceneID="G7z-Rw-22n">
@@ -410,7 +411,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2QI-nX-ax5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2422" y="-1887.9999999999998"/>
+            <point key="canvasLocation" x="1542" y="-904"/>
         </scene>
         <!--Game Graph View Controller-->
         <scene sceneID="cGp-3G-Dnc">
@@ -430,7 +431,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="llo-Yh-tIw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3082" y="-1817"/>
+            <point key="canvasLocation" x="2229" y="-889"/>
         </scene>
         <!--Teams Table View Controller-->
         <scene sceneID="czx-bR-dw8">
@@ -448,7 +449,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="50J-Ib-nU3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="617" y="-1900.9999999999998"/>
+            <point key="canvasLocation" x="17" y="1171"/>
         </scene>
         <!--Standings Table View Controller-->
         <scene sceneID="f2O-Hw-opx">
@@ -465,7 +466,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eiV-qe-smf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="674" y="-1067"/>
+            <point key="canvasLocation" x="-174" y="-1667"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pd5-Sh-rwr">
@@ -480,7 +481,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zjn-D1-CEq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="59" y="563"/>
+            <point key="canvasLocation" x="-437" y="1171"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="9pf-Ec-SSr">
@@ -515,7 +516,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vee-km-e20" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="753" y="538"/>
+            <point key="canvasLocation" x="921" y="1202"/>
         </scene>
         <!--Schedule Table View Controller-->
         <scene sceneID="ABT-Dz-yfF">
@@ -532,7 +533,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aJO-eS-8Y2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1251" y="-1067"/>
+            <point key="canvasLocation" x="1579" y="-1843"/>
         </scene>
         <!--Settings Table View Controller-->
         <scene sceneID="5st-Ty-uG8">
@@ -549,7 +550,26 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KwW-xO-wNA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="761" y="1354"/>
+            <point key="canvasLocation" x="433" y="1178"/>
+        </scene>
+        <!--News Web View Controller-->
+        <scene sceneID="7PG-37-L2f">
+            <objects>
+                <viewController id="ybU-hs-ShC" customClass="AUDLNewsWebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SVh-TP-Dnc"/>
+                        <viewControllerLayoutGuide type="bottom" id="PhI-6m-6Qz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rmH-O2-Gdq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1CY-56-Knn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fuo-3k-bdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2068" y="-126"/>
         </scene>
         <!--Stats Table View Controller-->
         <scene sceneID="15A-Eb-TGN">
@@ -566,7 +586,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sVf-LF-cjk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1251" y="-255.99999999999997"/>
+            <point key="canvasLocation" x="353" y="-1804"/>
         </scene>
         <!--Video Table View Controller-->
         <scene sceneID="W6S-cp-vDM">
@@ -583,7 +603,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ne-ZG-egr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1258" y="530"/>
+            <point key="canvasLocation" x="1418" y="618"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
