--- a/Main.storyboard
+++ b/Main.storyboard
@@ -213,7 +213,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="JfY-h4-ngk" kind="custom" customClass="SWRevealViewControllerSegue" id="f3c-LA-r42"/>
+                                    <segue destination="huK-yt-dEx" kind="custom" customClass="SWRevealViewControllerSegue" id="h5Q-CB-14m"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="standings" id="lZL-kF-5gg">
@@ -356,25 +356,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TwitterCellID" textLabel="p9D-1v-Aeu" style="IBUITableViewCellStyleDefault" id="v42-ZD-CCi">
-                                <rect key="frame" x="0.0" y="86" width="320" height="100"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="v42-ZD-CCi" id="kBh-DG-nVi">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="290" id="p9D-1v-Aeu">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="99"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="JfY-h4-ngk" id="U5R-gR-7FB"/>
                             <outlet property="delegate" destination="JfY-h4-ngk" id="4DM-6A-NOb"/>
@@ -534,6 +515,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aJO-eS-8Y2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1579" y="-1843"/>
+        </scene>
+        <!--Now View Controller-->
+        <scene sceneID="w0V-vx-vBU">
+            <objects>
+                <viewController id="huK-yt-dEx" customClass="AUDLNowViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jsa-hF-Cte"/>
+                        <viewControllerLayoutGuide type="bottom" id="TBk-d2-VMb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gZK-Vx-qIk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XOI-qd-gtI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2159" y="-1901"/>
         </scene>
         <!--Settings Table View Controller-->
         <scene sceneID="5st-Ty-uG8">
